Login Page Ready

--- a/odiyan-ui/index.html
+++ b/odiyan-ui/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>odiyan-ui</title>
+    <title>Odiyan Chat v0.1 - Secure Self Hostable Chat</title>
   </head>
   <body>
     <div id="root"></div>
